--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                     </div>
                 </div>
                 <div class="page-intro-item">
-                    <img src="assets/img/headshottypeNew.jpg" alt="Victor_Ojewale" width="180px" class="roundImg">
+                    <img src="assets/img/headShot.jpeg" alt="Victor_Ojewale" width="180px" class="roundImg">
                 </div>
             </div>
             <p>Hi, welcome to my website! :)</p>
-            <p style="text-align: justify;">I am a PhD student at the Center for Tech Responsibility, Reimagination and Redesign(The CNTR) in the Brown University Data Science Institute  where I am advised by <a href="https://www.brown.edu/initiatives/data-science/people/suresh-venkatasubramanian" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Suresh Venkatasubramanian</span></a> . 
-                My research interests lie in understanding the impacts of algorithmic systems, particularly through the lenses of algorithmic (un)fairness and algorithm audits. I am also a member of the RISE Lab at Brown University where i also work with <a href="https://www.brown.edu/academics/cognitive-linguistic-psychological-sciences/people/faculty/malik-boykin" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Malik Boykin</span></a> .  Previously, I studied Computer Science at the University of Ibadan.
+            <p style="text-align: justify;">I am a CS PhD student at Brown Univerity. I am also affiliated with the Center for Tech Responsibility, Reimagination and Redesign(CNTR) and the  Data Science Institute(DSI)  where I am advised by <a href="https://www.brown.edu/initiatives/data-science/people/suresh-venkatasubramanian" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Suresh Venkatasubramanian</span></a> . 
+                My research interests lie in understanding the impacts of algorithmic systems, particularly through the lenses of algorithmic (un)fairness and algorithm audits. I am also a member of the RISE Lab at Brown University where i also work with <a href="https://www.brown.edu/academics/cognitive-linguistic-psychological-sciences/people/faculty/malik-boykin" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Malik Boykin</span></a> in understanding people's perceptions of fairness.  Previously, I studied Computer Science at the University of Ibadan.
                 
             </p>
-            <p style="text-align: justify;"> I was the Lead Data Scientist at SeqHub Analytics llc and also a research assistant with The Mozilla OAT Project.</p>
+            <p style="text-align: justify;"> Before starting my Phd I was a Data Scientist at SeqHub Analytics llc and also a research assistant with .<a href="https://foundation.mozilla.org/en/what-we-fund/oat/" target="_blank"><span style="color: rgb(10, 93, 128)">The Mozilla OAT Project</span></a> </p>
              <p style="text-align: justify;">With a passion for exploring the ethical implications of emerging technologies, I am hoping to contribute to the development of more responsible and accountable technology systems.</p>
 
     </article>
@@ -72,6 +72,8 @@
         <ul class="list">
             <li>23/03/2023 : I co-facilitated a panel session on <a href="https://schedule.mozillafestival.org/session/WR9R7Z-1" target="_blank"><span style="color: rgb(10, 93, 128)"></span>Navigating the Open-Source Algorithm Audit tooling landscape</span></a> with <a href="https://abebabirhane.com/" target="_blank"><span style="color: rgb(10, 93, 128)"></span>Abeba Birhane</span></a>  at Mozfest, 2023</li>
             <li>01/03/2023 : I officially accepted Brown's PhD offer to start in the fall</li>
+
+
             
         </ul>
 
