--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <footer class="site-footer">
         <div class="container">
             <small>
-                    <b>Last Updated:</b> March 23, 2023
+                    <b>Last Updated:</b> Dec, 2023
                 </small>
             <small class="block">
                     © Victor Ojewale. Skillfully forked from <a href="https://stevenkolawole.github.io/" target="_blank"><span style="color: rgb(10, 93, 128)">Steven Kolawole's page</span></a>· &lt;/&gt; Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/heiswayi/thinkspace" target="_blank">Thinkspace</a>; hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
