--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Steven's Blog</title>
+    <title>Victor's Blog</title>
     <link rel="stylesheet" type="text/css" href="/assets//css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
