--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
     <div class="container">
         <h1 class="header-name">News</h1>
         <ul class="list">
-            <li>23/03/2023 : I co-facilitated a panel session on <a href="https://schedule.mozillafestival.org/session/WR9R7Z-1" target="_blank"><span style="color: rgb(10, 93, 128)"></span>Navigating the Open-Source Algorithm Audit tooling landscape</span></a> with <a href="https://abebabirhane.com/" target="_blank"><span style="color: rgb(10, 93, 128)"></span>Abeba Birhane</span></a>  at Mozfest, 2023</li>
-            <li>01/03/2023 : I officially accepted Brown's PhD offer to start in the fall</li>
+            <li>Our Paper <a href="https://openreview.net/pdf?id=TmagEd33w3" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"SoK: AI Auditing: The Broken Bus on the Road to AI Accountability"</span></a> has been accepted to to the 2nd IEEE Conference on Secure and Trustworthy Machine Learning! Camera-ready and more details on the way(Dec 2023)</li>
+            <li>I gave a talk at the inaugural research mentorship series of the Society of Petroleum Engineers, University of Ibadan Chapter. See Slides <a href="https://docs.google.com/presentation/d/1Ez4NByx2e8YOjDL2dchzyjEhGebqfrD7saYWnxAke0M/edit?usp=sharing" target="_blank"><span style="color: rgb(10, 93, 128)"></span>here</span></a>(Oct 2023)</li>
+            <li>I co-facilitated a panel session on <a href="https://schedule.mozillafestival.org/session/WR9R7Z-1" target="_blank"><span style="color: rgb(10, 93, 128)"></span>Navigating the Open-Source Algorithm Audit tooling landscape</span></a> with <a href="https://abebabirhane.com/" target="_blank"><span style="color: rgb(10, 93, 128)"></span>Abeba Birhane</span></a>  at Mozfest, 2023(Mar 2023)</li>
+            <li>I officially accepted Brown's PhD offer to start in the fall(Mar 2023)</li>
+            
 
 
             
