--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="index.html">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="assets/OjewaleCV2.pdf">CV</a></li>
-                    <li><a href="index.html" target="_blank">Publications</a></li>
+                    <li><a href="https://scholar.google.com/citations?hl=en&user=NMnrvgoAAAAJ" target="_blank">Publications</a></li>
                 </ul>
             </div>
         </nav>
