--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
                         <a class="social-item" href="https://twitter.com/OjewaleV" target="_blank">
                             <i class="fab fa-twitter" href="#" aria-hidden="true"></i>
                         </a>
-                        
+                        <a
+                        class="social-item"
+                        href="https://scholar.google.com/citations?hl=en&user=NMnrvgoAAAAJ"
+                        target="_blank">
+                        <i
+                          class="ai ai-google-scholar-square ai-2em"
+                          href="#"
+                          aria-hidden="true"
+                        ></i>
+                      </a>
                     </div>
                 </div>
                 <div class="page-intro-item">
