--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="assets/OjewaleCV2.pdf">CV</a></li>
                     <li><a href="research.html">Research</a></li>
-                    <li><a href="https://scholar.google.com/citations?hl=en&user=NMnrvgoAAAAJ" target="_blank">Publications</a></li>
                 </ul>
             </div>
         </nav>
@@ -73,7 +72,7 @@
                 My research interests lie in understanding the impacts of algorithmic systems, particularly through the lenses of algorithmic (un)fairness and algorithm audits. I am also a member of the RISE Lab at Brown University where i also work with <a href="https://www.brown.edu/academics/cognitive-linguistic-psychological-sciences/people/faculty/malik-boykin" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Malik Boykin</span></a> in understanding people's perceptions of fairness.  Previously, I studied Computer Science at the University of Ibadan.
                 
             </p>
-            <p style="text-align: justify;"> Before starting my Phd I was a Data Scientist at SeqHub Analytics llc and also a research assistant with .<a href="https://foundation.mozilla.org/en/what-we-fund/oat/" target="_blank"><span style="color: rgb(10, 93, 128)">The Mozilla OAT Project</span></a> </p>
+            <p style="text-align: justify;"> Before starting my Phd I was a Data Scientist at SeqHub Analytics llc and also a research assistant with <a href="https://foundation.mozilla.org/en/what-we-fund/oat/" target="_blank"><span style="color: rgb(10, 93, 128)">The Mozilla OAT Project</span></a> </p>
              <p style="text-align: justify;">With a passion for exploring the ethical implications of emerging technologies, I am hoping to contribute to the development of more responsible and accountable technology systems.</p>
 
     </article>
