--- a/research.html
+++ b/research.html
@@ -120,7 +120,7 @@
     <div class="container">
         <h1 class="header-name">Research</h1>
         <div class="research-publication">
-            <p class="publication-title"><a href="https://rbsteed.com/docs/accountability-infrastructure.pdf" class="publication-link" target="blank">AI Accountability Infrastructure: Gaps and Opportunities in AI Audit Tooling · 2024</a> </p>
+            <p class="publication-title"><a href="https://rbsteed.com/docs/accountability-infrastructure.pdf" class="publication-link" target="blank">Towards AI Accountability Infrastructure: Gaps and Opportunities in AI Audit Tooling · 2024</a> </p>
             <p class="conference-info">Forthcoming, 2024 CHI Conference on Human Factors in Computing Systems.</p>
             <p class="authors"><strong class="bold">Victor Ojewale</strong>, Ryan Steed, Briana Vecchione, Abeba Birhane & Inioluwa Deborah Raji.</p>
         </div>
