--- a/research.html
+++ b/research.html
@@ -131,7 +131,8 @@
         </div>
     
     </div>
-    <button id="toggleCommentsAndColumns">Comments and Columns</button>
+    <button id="toggleCommentsAndColumns" class="toggle-button">Comments and Columns</button>
+
 
     <div class="container" id="commentsAndColumnsContainer" style="display: none;">
         <div>
