--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul class="navbar">
                     <li><a href="index.html">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="assets/OjewaleCV2.pdf">CV</a></li>
+                    <li><a href="assets/Ojewale_CV.pdf">CV</a></li>
                     <li><a href="research.html">Research</a></li>
                 </ul>
             </div>
@@ -79,6 +79,8 @@
     <div class="container">
         <h1 class="header-name">News</h1>
         <ul class="list">
+            <li>We got a Distinguished Paper Award at the 2nd IEEE Conference on Secure and Trustworthy Machine Learning for our <a href="https://arxiv.org/abs/2401.14462" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"paper"</span></a> on the AI Auditing landscape(April 2024)</li>
+            <li>I would be presenting our <a href="https://arxiv.org/abs/2402.17861" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"paper"</span></a> "Towards AI Accountability Infrastructure: Gaps and Opportunities in AI Audit Tooling" at the <a href="http://northeasthcimeeting.info/" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"NorthEast HCI meeting"</span></a>.(March 2024)</li>
             <li>Our Paper <a href="https://arxiv.org/abs/2401.14462" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"SoK: AI Auditing: The Broken Bus on the Road to AI Accountability"</span></a> has been accepted to to the 2nd IEEE Conference on Secure and Trustworthy Machine Learning! Camera-ready and more details on the way(Dec 2023)</li>
             <li>I gave a talk at the inaugural research mentorship series of the Society of Petroleum Engineers, University of Ibadan Chapter. See Slides <a href="https://docs.google.com/presentation/d/1Ez4NByx2e8YOjDL2dchzyjEhGebqfrD7saYWnxAke0M/edit?usp=sharing" target="_blank"><span style="color: rgb(10, 93, 128)"></span>here</span></a>(Oct 2023)</li>
             <li>I co-facilitated a panel session on <a href="https://schedule.mozillafestival.org/session/WR9R7Z-1" target="_blank"><span style="color: rgb(10, 93, 128)"></span>Navigating the Open-Source Algorithm Audit tooling landscape</span></a> with <a href="https://abebabirhane.com/" target="_blank"><span style="color: rgb(10, 93, 128)"></span>Abeba Birhane</span></a>  at Mozfest, 2023(Mar 2023)</li>
