--- a/research.html
+++ b/research.html
@@ -76,7 +76,7 @@
                 <ul class="navbar">
                     <li><a href="index.html">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="assets/OjewaleCV2.pdf">CV</a></li>
+                    <li><a href="assets/Ojewale_CV.pdf">CV</a></li>
                     <li><a href="research.html">Research</a></li>
                 </ul>
             </div>
@@ -126,7 +126,7 @@
         </div>
         <div class="research-publication">
             <p class="publication-title"><a href="https://arxiv.org/pdf/2401.14462.pdf" class="publication-link" target="_blank">AI Auditing: The Broken Bus on the Road to AI Accountability · 2024</a></p>
-            <p class="conference-info">Forthcoming, 2nd IEEE Conference on Secure and Trustworthy Machine Learning (SaTML).</p>
+            <p class="conference-info">2nd IEEE Conference on Secure and Trustworthy Machine Learning (SaTML) - Distinguished Paper Award</p>
             <p class="authors">Abeba Birhane, Ryan Steed, <strong class="bold">Victor Ojewale</strong> , Briana Vecchione & Inioluwa Deborah Raji.</p>
         </div>
     
