--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
             <li><a href="index.html">About</a></li>
 
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="assets/OjewaleCV2.pdf">CV</a></li>
+            <li><a href="assets/Ojewale_CV.pdf">CV</a></li>
             <li><a href="" target="_blank">Publications</a></li>
           </ul>
         </div>
