--- a/research.html
+++ b/research.html
@@ -91,7 +91,7 @@
                     <a href="mailto: victordojewale@gmail.com">victordojewale@gmail.com</a>
                     <br>
                     <div class="social">
-                        <a class="social-item" href="https://github.com/Elvictor01" target="_blank">
+                        <a class="social-item" href="https://github.com/victorojewale" target="_blank">
                             <i class="fab fa-github" href="#" aria-hidden="true"></i>
                         </a> /
                         <a class="social-item" href="https://www.linkedin.com/in/elvictor/" target="_blank">
