--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="mailto: victordojewale@gmail.com">victordojewale@gmail.com</a>
                     <br>
                     <div class="social">
-                        <a class="social-item" href="https://github.com/Elvictor01" target="_blank">
+                        <a class="social-item" href="https://github.com/victorojewale" target="_blank">
                             <i class="fab fa-github" href="#" aria-hidden="true"></i>
                         </a> /
                         <a class="social-item" href="https://www.linkedin.com/in/elvictor/" target="_blank">
@@ -95,7 +95,7 @@
     <footer class="site-footer">
         <div class="container">
             <small>
-                    <b>Last Updated:</b> Mar, 2024
+                    <b>Last Updated:</b> Apr, 2024
                 </small>
             <small class="block">
                     © Victor Ojewale. Skillfully forked from <a href="https://stevenkolawole.github.io/" target="_blank"><span style="color: rgb(10, 93, 128)">Steven Kolawole's page</span></a>· &lt;/&gt; Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/heiswayi/thinkspace" target="_blank">Thinkspace</a>; hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
