--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
                 
             </p>
             <p style="text-align: justify;"> Before starting my Phd I was a Data Scientist at SeqHub Analytics llc and also a research assistant with <a href="https://foundation.mozilla.org/en/what-we-fund/oat/" target="_blank"><span style="color: rgb(10, 93, 128)">The Mozilla OAT Project</span></a> </p>
-             <p style="text-align: justify;">With a passion for exploring the ethical implications of emerging technologies, I am hoping to contribute to the development of more responsible and accountable technology systems.</p>
+             <p style="text-align: justify;">In my free time, I enjoy vlogging 🎥, playing video games 🎮, and watching anime 🎞️. I also dabble in music 🎵 from time to time.</p>
 
     </article>
     <div class="container">
         <h1 class="header-name">News</h1>
         <ul class="list">
+            <li>Towards AI Accountability Infrastructure:Gaps and Opportunities in AI Audit Tooling is accepted to CHI'25(Jan 2025)</li>
             <li>We got a Distinguished Paper Award at the 2nd IEEE Conference on Secure and Trustworthy Machine Learning for our <a href="https://arxiv.org/abs/2401.14462" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"paper"</span></a> on the AI Auditing landscape(April 2024)</li>
             <li>I would be presenting our <a href="https://arxiv.org/abs/2402.17861" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"paper"</span></a> "Towards AI Accountability Infrastructure: Gaps and Opportunities in AI Audit Tooling" at the <a href="http://northeasthcimeeting.info/" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"NorthEast HCI meeting"</span></a>.(March 2024)</li>
             <li>Our Paper <a href="https://arxiv.org/abs/2401.14462" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"SoK: AI Auditing: The Broken Bus on the Road to AI Accountability"</span></a> has been accepted to to the 2nd IEEE Conference on Secure and Trustworthy Machine Learning! Camera-ready and more details on the way(Dec 2023)</li>
