--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
                 
             </p>
             <p style="text-align: justify;"> Before starting my Phd I was a Data Scientist at SeqHub Analytics llc and also a research assistant with <a href="https://foundation.mozilla.org/en/what-we-fund/oat/" target="_blank"><span style="color: rgb(10, 93, 128)">The Mozilla OAT Project</span></a> </p>
-             <p style="text-align: justify;">In my free time, I enjoy vlogging 🎥, playing video games 🎮, and watching anime 🎞️. I also dabble in music 🎵 from time to time.</p>
-
+            <p style="text-align: justify;">
+                In my free time, I enjoy vlogging 🎥 (<a href="https://www.youtube.com/@victorojewale" target="_blank">you should subscribe to my YT channel</a> 😉), playing video games 🎮, and watching anime 🎞️. I also dabble in music 🎵 from time to time.
+              </p>
+              
     </article>
     <div class="container">
         <h1 class="header-name">News</h1>
@@ -96,7 +98,7 @@
     <footer class="site-footer">
         <div class="container">
             <small>
-                    <b>Last Updated:</b> March, 2024
+                    <b>Last Updated:</b> March, 2025
                 </small>
             <small class="block">
                     © Victor Ojewale. Skillfully forked from <a href="https://stevenkolawole.github.io/" target="_blank"><span style="color: rgb(10, 93, 128)">Steven Kolawole's page</span></a>· &lt;/&gt; Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/heiswayi/thinkspace" target="_blank">Thinkspace</a>; hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
