--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <p>Hi, welcome to my website! :)</p>
-            <p style="text-align: justify;">I am a CS PhD student at Brown Univerity. I am also affiliated with the Center for Tech Responsibility, Reimagination and Redesign(CNTR) and the  Data Science Institute(DSI)  where I am advised by <a href="https://vivo.brown.edu/display/suresh" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Suresh Venkatasubramanian</span></a> . 
+            <p style="text-align: justify;">I am a CS PhD candidate at Brown Univerity. I am also affiliated with the Center for Tech Responsibility, Reimagination and Redesign(CNTR) and the  Data Science Institute(DSI)  where I am advised by <a href="https://vivo.brown.edu/display/suresh" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Suresh Venkatasubramanian</span></a> . 
                 My research interests lie in understanding perceptions of algorithmic systems, AI Audits, and sociotechnical evaluation of Large language Models(LLMs) . I am also a member of the RISE Lab at Brown University where i also work with <a href="https://www.brown.edu/academics/cognitive-linguistic-psychological-sciences/people/faculty/malik-boykin" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Malik Boykin</span></a>.  Previously, I studied Computer Science at the University of Ibadan.
                 
             </p>
