--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="page-intro-item">
                     <strong>Victor Ojewale</strong>
                     <br> <br> Email:
-                    <a href="mailto: victordojewale@gmail.com">victordojewale@gmail.com</a>
+                    <a href="mailto: victor_ojewale@brown.edu">victor_ojewale@brown.edu</a>
                     <br>
                     <div class="social">
                         <a class="social-item" href="https://github.com/victorojewale" target="_blank">
@@ -81,7 +81,10 @@
     <div class="container">
         <h1 class="header-name">News</h1>
         <ul class="list">
-            <li>Towards AI Accountability Infrastructure:Gaps and Opportunities in AI Audit Tooling is accepted to CHI'25(Jan 2025)</li>
+            <li>Excited to be one of the key note speakers at the inauagural Technical AI Governance Workshop at ICML(July 2025)</li>
+            <li>Serving as one of the Social Chairs for FAccT 2025(May 2025)</li>
+            <li>I am giving an invited talk at the <a href="https://moritzlaw.osu.edu/faculty-and-research/program-data-and-governance/Program-on-Data-and-Governance-engagement"  target="_blank"><span style="color: rgb(10, 93, 128)"></span>"Ohio Data Ethics Working Group"</span></a> on the landscape of AI Audit Tools(April 2025)</li>
+            <li>Towards AI Accountability Infrastructure:Gaps and Opportunities in AI Audit Tooling is accepted to CHI'25. See you in Japan! (Jan 2025)</li>
             <li>We got a Distinguished Paper Award at the 2nd IEEE Conference on Secure and Trustworthy Machine Learning for our <a href="https://arxiv.org/abs/2401.14462" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"paper"</span></a> on the AI Auditing landscape(April 2024)</li>
             <li>I would be presenting our <a href="https://arxiv.org/abs/2402.17861" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"paper"</span></a> "Towards AI Accountability Infrastructure: Gaps and Opportunities in AI Audit Tooling" at the <a href="http://northeasthcimeeting.info/" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"NorthEast HCI meeting"</span></a>.(March 2024)</li>
             <li>Our Paper <a href="https://arxiv.org/abs/2401.14462" target="_blank"><span style="color: rgb(10, 93, 128)"></span>"SoK: AI Auditing: The Broken Bus on the Road to AI Accountability"</span></a> has been accepted to to the 2nd IEEE Conference on Secure and Trustworthy Machine Learning! Camera-ready and more details on the way(Dec 2023)</li>
