--- a/research.html
+++ b/research.html
@@ -88,7 +88,7 @@
                 <div class="page-intro-item">
                     <strong>Victor Ojewale</strong>
                     <br> <br> Email:
-                    <a href="mailto: victordojewale@gmail.com">victordojewale@gmail.com</a>
+                    <a href="mailto: victor_ojewale@brown.edu">victor_ojewale@brown.edu</a>
                     <br>
                     <div class="social">
                         <a class="social-item" href="https://github.com/victorojewale" target="_blank">
