--- a/blog.html
+++ b/blog.html
@@ -44,11 +44,10 @@
           alt="Under Construction"
         />
         <h1>
-          This page is under construction. Check Medium for my older articles.
-        </h1>
+          This page is under construction. You can subscribe to my substack here
         <div class="read-more-button">
-          <a target="_blank" href="https://medium.com/@elVictor01"
-            >Go to Medium</a
+          <a target="_blank" href="https://victorojewale.substack.com/"
+            >Go to Substack</a
           >
         </div>
       </div>
