--- a/blog.html
+++ b/blog.html
@@ -1,56 +1,61 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Victor's Blog</title>
-    <link rel="stylesheet" type="text/css" href="/assets//css/style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"
-    />
-  </head>
+<html lang="en">
 
-  <body>
-    <header class="site-header">
+<head>
+  <title>Blog - Victor Ojewale</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+  <!-- Fonts & Icons -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Overpass+Mono:wght@300;400;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+</head>
+
+<body>
+  <header class="site-header">
+    <div class="container">
       <nav class="nav">
-        <div class="container flex-wrap">
-          <h1 class="logo">
-            <a href="https://victorojewale.github.io/">Victor Ojewale</a>
-          </h1>
-          <ul class="navbar">
-            <li><a href="index.html">About</a></li>
-
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="assets/Ojewale_CV.pdf">CV</a></li>
-            <li><a href="" target="_blank">Publications</a></li>
-          </ul>
+        <div class="logo">
+          <a href="index.html">Victor Ojewale</a>
         </div>
+        <ul class="navbar">
+          <li><a href="index.html">About</a></li>
+          <li><a href="research.html">Publications</a></li>
+          <li><a href="https://victorojewale.substack.com/" target="_blank">Blog</a></li>
+          <li><a href="assets/Ojewale_CV.pdf" target="_blank">CV</a></li>
+        </ul>
       </nav>
-    </header>
-
-    <div class="page container">
-      <h1 class="header-name">Blog</h1>
-      <div class="blog-container">
-        <img
-          src="/assets/img/undraw_under_construction_46pa.png"
-          alt="Under Construction"
-        />
-        <h1>
-          This page is under construction. You can subscribe to my substack here
-        <div class="read-more-button">
-          <a target="_blank" href="https://victorojewale.substack.com/"
-            >Go to Substack</a
-          >
-        </div>
-      </div>
     </div>
-  </body>
+  </header>
+
+  <main class="container fade-in" style="margin-top: var(--space-lg);">
+    <h1>Blog</h1>
+
+    <div class="card text-center" style="padding: var(--space-xl) var(--space-md);">
+      <img src="assets/img/undraw_under_construction_46pa.png" alt="Under Construction"
+        style="max-width: 300px; margin: 0 auto 2rem auto;">
+
+      <h2 style="font-size: 1.5rem; margin-bottom: 1rem;">Work in Progress</h2>
+      <p>
+        This page is currently under construction. In the meantime, you can read my thoughts on Substack.
+      </p>
+
+      <a href="https://victorojewale.substack.com/" target="_blank" class="button">
+        Visit my Substack
+      </a>
+    </div>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>&copy; 2025 Victor Ojewale.</p>
+    </div>
+  </footer>
+</body>
+
 </html>
