update malik link

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
                     <strong>evaluation infrastructure for large language models</strong>. My goal is to build
                     rigorous, context-aware evaluation methods that make model behavior measurable, comparable, and
                     auditable in real-world use.
+
                 </p>
                 <p>
                     Affiliated with the <a href="https://cntr.brown.edu/" target="_blank">Center for Tech Responsibility
                         (CNTR)</a> and <a href="https://dsi.brown.edu/" target="_blank">Data Science Institute
                         (DSI)</a>, advised by <a href="https://vivo.brown.edu/display/suresh" target="_blank">Prof.
-                        Suresh Venkatasubramanian</a>. I am also a member of the <a href="https://www.riselab.org/"
-                        target="_blank">RISE Lab</a>, working with <a
-                        href="https://www.brown.edu/academics/cognitive-linguistic-psychological-sciences/people/faculty/malik-boykin"
-                        target="_blank">Prof. Malik Boykin</a>.
+                        Suresh Venkatasubramanian</a>. I am also a member of the <a href="https://riselab.science/"
+                        target="_blank">RISE Lab</a>, working with <a href="https://vivo.brown.edu/display/cboykin"
+                        target="_blank">Prof. C. Malik Boykin</a>.
                 </p>
                 <p>
                     Previously, I was a Data Scientist at SeqHub Analytics and a research assistant with <a
